--- a/content/references.bib
+++ b/content/references.bib
@@ -4,25 +4,21 @@
   journal = {Scientific American},
   volume = {284},
   number = {5},
-  pages = {28--37},
   year = {2001},
-  publisher = {New York, NY, USA:}
 }
 
 @inproceedings{sbischof15,
   author    = {Bischof, Stefan},
   title     = {Improving Practical Reasoning on top of SPARQL},
-  booktitle = {Proceedings of the International Conference on Web Reasoning and Rule Systems, Doctoral Consortium, Berlin, Germany, August 2-5, 2015},
+  booktitle = {The International Conference on Web Reasoning and Rule Systems, Doctoral Consortium, Berlin, Germany, August 2-5, 2015},
   year      = {2015}
 }
 
 @inproceedings{solid,
   title={A demonstration of the solid platform for social web applications},
   author={Mansour, Essam and Sambra, Andrei Vlad and Hawke, Sandro and Zereba, Maged and Capadisli, Sarven and Ghanem, Abdurrahman and Aboulnaga, Ashraf and Berners-Lee, Tim},
-  booktitle={Proceedings of the 25th International Conference Companion on World Wide Web},
-  pages={223--226},
+  booktitle={The 25th International Conference Companion on World Wide Web},
   year={2016},
-  organization={International World Wide Web Conferences Steering Committee}
 }
 
 @InProceedings{sameas,
@@ -34,11 +30,6 @@ and Thompson, Henry S.},
 title={When owl:sameAs Isn't the Same: An Analysis of Identity in Linked Data},
 booktitle={The Semantic Web -- ISWC 2010},
 year={2010},
-publisher={Springer Berlin Heidelberg},
-address={Berlin, Heidelberg},
-pages={305--320},
-abstract={In Linked Data, the use of owl:sameAs is ubiquitous in interlinking data-sets. There is however, ongoing discussion about its use, and potential misuse, particularly with regards to interactions with inference. In fact, owl:sameAs can be viewed as encoding only one point on a scale of similarity, one that is often too strong for many of its current uses. We describe how referentially opaque contexts that do not allow inference exist, and then outline some varieties of referentially-opaque alternatives to owl:sameAs. Finally, we report on an empirical experiment over randomly selected owl:sameAs statements from the Web of data. This theoretical apparatus and experiment shed light upon how owl:sameAs is being used (and misused) on the Web of data.},
-isbn={978-3-642-17746-0}
 }
 
 
@@ -65,9 +56,7 @@ isbn={978-3-642-17746-0}
   type = "Recommendation",
   institution = "W3C",
   author = {Speicher, Steve, John Arwe, and Ashok Malhotra},
-  month = {feb},
   year = {2015},
-  url = {https://www.w3.org/TR/ldp/}
 }
 
 @TechReport{spec:webid,
@@ -75,9 +64,7 @@ isbn={978-3-642-17746-0}
   type = "Editor's Draft",
   institution = "W3C",
   author = {Sporny, Manu and Inkster, Toby and Story, Henry and Harbulot, Bruno and Bachmann-Gm{\"u}r, Reto},
-  month = {mar},
   year = {2014},
-  url = {https://www.w3.org/2005/Incubator/webid/spec/identity/}
 }
 
 @online{spec:wac,
@@ -93,9 +80,7 @@ isbn={978-3-642-17746-0}
   author = {Harris, Steve and Seaborne, Andy and Prud'hommeaux, Eric},
   type = "Recommendation",
   institution = "W3C",
-  month = mar,
   year = {2013},
-  url = {https://www.w3.org/TR/2013/REC-sparql11-query-20130321/}
 }
 
 @TechReport{spec:sparqlprot,
@@ -103,9 +88,7 @@ isbn={978-3-642-17746-0}
   author = {Feigenbaum, Lee and Todd Williams, Gregory and Grant Clark, Kendall and Torres, Elias},
   type = "Rec.",
   institution = "W3C",
-  month = {mar},
   year = {2013},
-  url = {https://www.w3.org/TR/2013/REC-sparql11-protocol-20130321/}
 }
 
 @TechReport{spec:rdf,
@@ -113,9 +96,7 @@ isbn={978-3-642-17746-0}
   type = "Recommendation",
   institution = "W3C",
   author = {Cyganiak, Richard and Wood, David and Lanthaler, Markus},
-  month = {feb},
   year = {2014},
-  url = {https://www.w3.org/TR/2014/REC-rdf11-concepts-20140225/}
 }
 
 @TechReport{spec:ldn,
@@ -123,9 +104,7 @@ isbn={978-3-642-17746-0}
   type = "Recommendation",
   institution = "W3C",
   author = {Capadisli, Sarven and Guy, Amy},
-  month = {may},
   year = {2017},
-  url = {https://www.w3.org/TR/ldn/}
 }
 
 @TechReport{spec:shacl,
@@ -133,9 +112,7 @@ isbn={978-3-642-17746-0}
   type = "Recommendation",
   institution = "W3C",
   author = {Knublauch, Holger and Kontokostas, Dimitris},
-  month = {july},
   year = {2017},
-  url = {https://www.w3.org/TR/shacl/}
 }
 
 @article{summaries,
@@ -143,10 +120,7 @@ isbn={978-3-642-17746-0}
   author={Umbrich, J{\"u}rgen and Hose, Katja and Karnstedt, Marcel and Harth, Andreas and Polleres, Axel},
   journal={World Wide Web},
   volume={14},
-  number={5-6},
-  pages={495--544},
   year={2011},
-  publisher={Springer}
 }
 
 @article{sparqlfederation,
@@ -155,59 +129,44 @@ isbn={978-3-642-17746-0}
   journal={Semantic Web},
   volume={7},
   number={5},
-  pages={493--518},
   year={2016},
-  publisher={IOS Press}
 }
 
 @article{solid_gov,
   author = {Buyle, Raf and Taelman, Ruben and Mostaert, Katrien and Joris, Geroen and Mannens, Erik and Verborgh, Ruben and Berners-Lee, Tim},
   title = {Streamlining governmental processes by putting citizens in control of their personal data},
-  booktitle = {Proceedings of the 6th International Conference on Electronic Governance and Open Society: Challenges in Eurasia},
+  booktitle = {The 6th International Conference on Electronic Governance and Open Society: Challenges in Eurasia},
   year = {2019},
-  month = nov,
-  url = {https://drive.verborgh.org/publications/buyle_egose_2019.pdf},
   note = {Accepted for publication}
 }
 
 @inproceedings{comunica,
   author = {Taelman, Ruben and Van Herwegen, Joachim and Vander Sande, Miel and Verborgh, Ruben},
   title = {Comunica: a Modular SPARQL Query Engine for the Web},
-  booktitle = {Proceedings of the 17th International Semantic Web Conference},
+  booktitle = {The 17th International Semantic Web Conference},
   year = {2018},
-  month = oct,
-  url = {https://comunica.github.io/Article-ISWC2018-Resource/}
 }
 
 @inproceedings{hypermedia_shapes,
   title = {Declaratively Describing Responses of Hypermedia-Driven {Web} {APIs}},
   author = {Taelman, Ruben and Verborgh, Ruben},
-  booktitle = {Proceedings of the 9th International Conference on Knowledge Capture},
+  booktitle = {The 9th International Conference on Knowledge Capture},
   year = {2017},
-  month = dec,
-  url = {https://linkeddatafragments.github.io/Article-Declarative-Hypermedia-Responses/}
 }
 
 @inproceedings{sparql_costly,
   title={Sparql web-querying infrastructure: Ready for action?},
   author={Buil-Aranda, Carlos and Hogan, Aidan and Umbrich, J{\"u}rgen and Vandenbussche, Pierre-Yves},
   booktitle={International Semantic Web Conference},
-  pages={277--293},
   year={2013},
-  organization={Springer}
 }
 
 @article{ldf,
   title = {{Triple Pattern Fragments:} a Low-cost Knowledge Graph Interface for the {Web}},
   author = {Verborgh, Ruben and Vander Sande, Miel and Hartig, Olaf and Van Herwegen, Joachim and De Vocht, Laurens and De Meester, Ben and Haesendonck, Gerald and Colpaert, Pieter},
   journal = {Journal of Web Semantics},
-  month = mar,
   year = 2016,
   volume = {37--38},
-  pages.bak = {184--206},
-  issn = {1570-8268},
-  doi = {10.1016/j.websem.2016.03.003},
-  url = {http://linkeddatafragments.org/publications/jws2016.pdf},
 }
 
 @article{bloomfilter,
@@ -216,10 +175,7 @@ isbn={978-3-642-17746-0}
   journal={Communications of the ACM},
   volume={13},
   number={7},
-  pages={422--426},
   year={1970},
-  publisher={ACM},
-  url={http://crystal.uta.edu/~mcguigan/cse6350/papers/Bloom.pdf}
 }
 
 @article{gcsfilter,
@@ -227,50 +183,35 @@ isbn={978-3-642-17746-0}
   author={Putze, Felix and Sanders, Peter and Singler, Johannes},
   journal={Journal of Experimental Algorithmics (JEA)},
   volume={14},
-  pages={4},
   year={2009},
-  publisher={ACM},
-  url={https://www.cs.amherst.edu/~ccmcgeoch/cs34/papers/cacheefficientbloomfilters-jea.pdf}
 }
 
 @inproceedings{bloomIO,
   title={AWETO: efficient incremental update and querying in RDF storage system},
   author={Pu, Xu and Wang, Jianyong and Luo, Ping and Wang, Min},
-  booktitle={Proceedings of the 20th ACM international conference on Information and knowledge management},
-  pages.bak={2445--2448},
+  booktitle={The 20th ACM international conference on Information and knowledge management},
   year={2011},
-  organization.bak={ACM},
-  url={https://dl.acm.org/citation.cfm?doid=2063576.2063988}
 }
 
 @inproceedings{bloomjoinslarge,
   title={Scalable join processing on very large RDF graphs},
   author={Neumann, Thomas and Weikum, Gerhard},
-  booktitle={Proceedings of the 2009 ACM SIGMOD International Conference on Management of data},
-  pages={627--640},
+  booktitle={The 2009 ACM SIGMOD International Conference on Management of data},
   year={2009},
-  organization={ACM},
-  url={https://www.researchgate.net/profile/Thomas_Neumann2/publication/47863714_Scalable_Join_Processing_on_Very_Large_RDF_Graphs/links/00b7d51d1687cae740000000.pdf}
 }
 
 @inproceedings{tpf_amf,
   title={Opportunistic Linked Data querying through approximate membership metadata},
   author={Vander Sande, Miel and Verborgh, Ruben and Van Herwegen, Joachim and Mannens, Erik and Van de Walle, Rik},
   booktitle={International Semantic Web Conference},
-  pages={92--110},
   year={2015},
-  organization={Springer},
-  url={http://linkeddatafragments.org/publications/iswc2015-amf.pdf}
 }
 
 @inproceedings{bloomsparqlask,
   title={Towards benefit-based RDF source selection for SPARQL queries},
   author={Hose, Katja and Schenkel, Ralf},
-  booktitle={Proceedings of the 4th International Workshop on Semantic Web Information Management},
-  pages={2},
+  booktitle={The 4th International Workshop on Semantic Web Information Management},
   year={2012},
-  organization={ACM},
-  url={https://domino.mpi-inf.mpg.de/intranet/ag5/ag5publ.nsf/0/DAAD136B50B0C0ECC12579E6004D6582/$file/p2-hose.pdf}
 }
 
 @inproceedings{wac_ppo,
@@ -278,16 +219,13 @@ isbn={978-3-642-17746-0}
   author={Sacco, Owen and Passant, Alexandre},
   booktitle={LDOW},
   year={2011},
-  organization={Citeseer}
 }
 
 @inproceedings{wac_ext,
   title={An access control model for linked data},
   author={Villata, Serena and Delaforge, Nicolas and Gandon, Fabien and Gyrard, Amelie},
   booktitle={OTM Confederated International Conferences" On the Move to Meaningful Internet Systems"},
-  pages={454--463},
   year={2011},
-  organization={Springer}
 }
 
 @article{linktraversal,
@@ -296,24 +234,19 @@ isbn={978-3-642-17746-0}
   journal={Datenbank-Spektrum},
   volume={13},
   number={2},
-  pages={89--99},
   year={2013},
-  publisher={Springer}
 }
 
 @article{summaries_heritage,
   author = {Vander Sande, Miel and de Valk, Sjors and Meijers, Enno and Taelman, Ruben and Van de Sompel, Herbert and Verborgh, Ruben},
   title = {Discovering Data Sources in a Distributed Network of Heritage Information},
-  booktitle = {Proceedings of the Posters and Demo Track of the 15th International Conference on Semantic Systems},
+  booktitle = {The 15th International Conference on Semantic Systems},
   year = {2019},
-  month = oct,
-  url = {http://ceur-ws.org/Vol-2451/paper-28.pdf}
 }
 
 @techreport{Sambra2014,
 author = {Andrei Sambra and Henry Story and Tim Berners-Lee},
 Institution = {{W3C}},
-Month = {March},
 Title = {{Web Identity and Discovery}},
 Type = {{W3C Editor's Draft, available at \url{http://www.w3.org/2005/Incubator/webid/spec/identity/}}},
 Year = {2014},
@@ -322,7 +255,6 @@ Year = {2014},
 @techreport{Inkster2014,
 Author = {Toby Inkster and Henry Story and Bruno Harbulot},
 Institution = {{W3C}},
-Month = {March},
 Title = {{WebID Authentication over TLS}},
 Type = {{W3C Editor's Draft, available at \url{http://www.w3.org/2005/Incubator/webid/spec/tls/}}},
 Year = {2014},
@@ -331,7 +263,7 @@ Year = {2014},
 @inproceedings{Hollenbach2009,
 title={Using rdf metadata to enable access control on the social semantic web},
 author={Hollenbach, James and Presbrey, Joe and Berners-Lee, Tim},
-booktitle={Proceedings of the Workshop on Collaborative Construction, Management and Linking of Structured Knowledge (CK2009)},
+booktitle={The Workshop on Collaborative Construction, Management and Linking of Structured Knowledge (CK2009)},
 volume={514},
 year={2009}
 }
@@ -341,9 +273,7 @@ year={2009}
   author={M{\"u}hle, Alexander and Gr{\"u}ner, Andreas and Gayvoronskaya, Tatiana and Meinel, Christoph},
   journal={Computer Science Review},
   volume={30},
-  pages={80--86},
   year={2018},
-  publisher={Elsevier}
 }
 
 
@@ -351,9 +281,7 @@ year={2009}
   title={The web SSO standard openid connect: In-depth formal security analysis and security guidelines},
   author={Fett, Daniel and K{\"u}sters, Ralf and Schmitz, Guido},
   booktitle={2017 IEEE 30th Computer Security Foundations Symposium (CSF)},
-  pages={189--202},
   year={2017},
-  organization={IEEE}
 }
 
 @TechReport{OpenIDConnect,
@@ -361,9 +289,7 @@ year={2009}
   type = "Specification",
   institution = "OpenID Foundation",
   author = {N. Sakimura and J. Bradley and M. Jones and B. de Medeiros and C. Mortimore},
-  month = {November},
   year = {2014},
-  url = {https://openid.net/specs/openid-connect-core-1_0.html }
 }
 
 
@@ -372,9 +298,7 @@ year={2009}
   author={M{\"u}hle, Alexander and Gr{\"u}ner, Andreas and Gayvoronskaya, Tatiana and Meinel, Christoph},
   journal={Computer Science Review},
   volume={30},
-  pages={80--86},
   year={2018},
-  publisher={Elsevier}
 }
 
 @TechReport{SSI,
@@ -382,9 +306,7 @@ year={2009}
   type = "Whitepaper",
   institution = "EGIZ",
   author = {Andreas Abraham},
-  month = {October},
   year = {2017},
-  url = { https://www.egiz.gv.at/files/download/Self-Sovereign-Identity-Whitepaper.pdf}
 }
 
 @inproceedings{Villata2011,
@@ -392,8 +314,6 @@ author    = {Serena Villata and Nicolas Delaforge and Fabien Gandon and Amelie G
 title     = {An Access Control Model for Linked Data},
 booktitle = {On the Move to Meaningful Internet Systems: OTM 2011 Workshops},
 year      = {2011},
-pages     = {454-463},
-ee        = {http://dx.doi.org/10.1007/978-3-642-25126-9_57},
 }
 
 @inproceedings{Sacco2011b,
@@ -401,34 +321,26 @@ author    = {Owen Sacco and Alexandre Passant},
 title     = {A Privacy Preference Manager for the Social Semantic Web},
 booktitle = {Semantic Personalized Information Management: Retrieval and Recommendation},
 year      = {2011},
-url        = {http://ceur-ws.org/Vol-781/paper6.pdf},
-publisher = {CEUR-WS},
 }
 
 @inproceedings{Kirrane2013,
 year={2013},
 booktitle={Security and Privacy Protection in Information Processing Systems},
 volume={405},
-series={IFIP Advances in Information and Communication Technology},
 title={Applying DAC Principles to the RDF Graph Data Model},
-url={http://dx.doi.org/10.1007/978-3-642-39218-4_6},
-publisher={Springer Berlin Heidelberg},
 author={Kirrane, Sabrina and Mileo, Alessandra and Decker, Stefan},
-pages={69-82},
 }
 
 @inproceedings{kasten2013towards,
   title={Towards search on encrypted graph data},
   author={Kasten, Andreas and Scherp, Ansgar and Armknecht, Frederik and Krause, Matthias},
   booktitle={Proc. of the International Conference on Society, Privacy and the Semantic Web-Policy and Technology},
-  pages={46--57},
   year={2013}
 }
 
 @inproceedings{giereth2005partial,
   author = {Giereth, Mark},
   booktitle = {Proc. of International Semantic Web Conference},
-  pages = {308-322},
   title = {{On Partial Encryption of RDF-Graphs.}},
   volume = 3729,
   year = 2005
@@ -438,9 +350,7 @@ pages={69-82},
   title={Self-Enforcing Access Control for Encrypted RDF},
   author={Fern{\'a}ndez, Javier D and Kirrane, Sabrina and Polleres, Axel and Steyskal, Simon},
   booktitle={European Semantic Web Conference},
-  pages={607--622},
   year={2017},
-  organization={Springer}
 }
 
 @article{kirrane2017access,
@@ -449,28 +359,21 @@ pages={69-82},
   journal={Semantic Web},
   volume={8},
   number={2},
-  pages={311--352},
   year={2017},
-  publisher={IOS Press},
-  url={http://www.semantic-web-journal.net/system/files/swj1280.pdf}
 }
 
 @inproceedings{hibiscus,
   title={Hibiscus: Hypergraph-based source selection for sparql endpoint federation},
   author={Saleem, Muhammad and Ngomo, Axel-Cyrille Ngonga},
   booktitle={European semantic web conference},
-  pages={176--191},
   year={2014},
-  organization={Springer}
 }
 
 @inproceedings{splendid,
   title={Splendid: Sparql endpoint federation exploiting void descriptions},
   author={G{\"o}rlitz, Olaf and Staab, Steffen},
-  booktitle={Proceedings of the Second International Conference on Consuming Linked Data-Volume 782},
-  pages={13--24},
+  booktitle={The Second International Conference on Consuming Linked Data-Volume 782},
   year={2011},
-  organization={CEUR-WS. org}
 }
 
 @article{rdf3x,
@@ -479,7 +382,5 @@ pages={69-82},
   journal = {Proceedings of the VLDB Endowment},
   volume = {1},
   number = {1},
-  pages = {647--659},
   year = {2008},
-  publisher = {VLDB Endowment}
 }
