down to 15 pages

--- a/content/references.bib
+++ b/content/references.bib
@@ -166,7 +166,6 @@ year={2010},
   author = {Verborgh, Ruben and Vander Sande, Miel and Hartig, Olaf and Van Herwegen, Joachim and De Vocht, Laurens and De Meester, Ben and Haesendonck, Gerald and Colpaert, Pieter},
   journal = {Journal of Web Semantics},
   year = 2016,
-  volume = {37--38},
 }
 
 @article{bloomfilter,
@@ -196,7 +195,7 @@ year={2010},
 @inproceedings{bloomjoinslarge,
   title={Scalable join processing on very large RDF graphs},
   author={Neumann, Thomas and Weikum, Gerhard},
-  booktitle={The 2009 ACM SIGMOD International Conference on Management of data},
+  booktitle={The ACM SIGMOD International Conference on Management of data},
   year={2009},
 }
 
