updates based on feedback from the reviewers

--- a/content/references.bib
+++ b/content/references.bib
@@ -383,3 +383,13 @@ author={Kirrane, Sabrina and Mileo, Alessandra and Decker, Stefan},
   number = {1},
   year = {2008},
 }
+
+
+@article{goh2003secure,
+  title={Secure indexes.},
+  author={Goh, Eu-Jin},
+  journal={IACR Cryptol. ePrint Arch.},
+  volume={2003},
+  pages={216},
+  year={2003}
+}
