--- a/content/references.bib
+++ b/content/references.bib
@@ -393,3 +393,13 @@ author={Kirrane, Sabrina and Mileo, Alessandra and Decker, Stefan},
   pages={216},
   year={2003}
 }
+
+@article{tekin2017implementation,
+  title={Implementation and evaluation of improved secure index scheme using standard and counting bloom filters},
+  author={Tekin, Leyla and Sahin, Serap},
+  journal={International Journal of Information Security Science},
+  volume={6},
+  number={4},
+  pages={46--56},
+  year={2017}
+}
